--- a/LigaMVC/resources/css/app.css
+++ b/LigaMVC/resources/css/app.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 [x-cloak] {
     display: none;
+}
+
+h1{
+    @apply font-mont text-3xl font-bold text-blue-900 text-center underline;
 }
